src/test/ui/union/union-derive-clone.mirunsafeck.stderr
error[E0599]: the method `clone` exists for union `U5<CloneNoCopy>`, but its trait bounds were not satisfied
  --> $DIR/union-derive-clone.rs:38:15
   |
LL | union U5<T> {
   | -----------
   | |
   | method `clone` not found for this
   | doesn't satisfy `U5<CloneNoCopy>: Clone`
...
LL | struct CloneNoCopy;
   | ------------------- doesn't satisfy `CloneNoCopy: Copy`
...
LL |     let w = u.clone();
   |               ^^^^^ method cannot be called on `U5<CloneNoCopy>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `CloneNoCopy: Copy`
           which is required by `U5<CloneNoCopy>: Clone`
help: consider annotating `CloneNoCopy` with `#[derive(Copy)]`
   |
LL | #[derive(Copy)]
   |

error[E0277]: the trait bound `U1: Copy` is not satisfied
  --> $DIR/union-derive-clone.rs:6:10
   |
LL | #[derive(Clone)]
   |          ^^^^^ the trait `Copy` is not implemented for `U1`
   |
note: required by a bound in `AssertParamIsCopy`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL | pub struct AssertParamIsCopy<T: Copy + ?Sized> {
   |                                 ^^^^ required by this bound in `AssertParamIsCopy`
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
